--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -23,7 +23,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/SandBox.SandBox
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/BP_ShooterGameMode.BP_ShooterGameMode_C
+GlobalDefaultGameMode=/Game/BP_KillThemAllGameMode.BP_KillThemAllGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.CollisionProfile]
